--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,18 +8,46 @@ jobs:
     steps:
       - checkout
 
+      # Prime caches for faster checkout
+      - restore_cache:
+          keys:
+            - template
+      - run:
+          name: "Update Template"
+          command: "git -C ~/i-d-template remote update --prune"
+      - save_cache:
+          key: template
+          paths:
+            - ~/i-d-template
+
       # Build txt and html versions of drafts
+      - restore_cache:
+          keys:
+            - refcache
       - run:
           name: "Build Drafts"
-          command: "make 'CLONE_ARGS=--reference ~/git-reference'"
+          command: "make 'CLONE_ARGS=--reference ~/i-d-template'"
+      - save_cache:
+          key: refcache
+          paths:
+            - ~/.cache/xml2rfc
 
-      # Update editor's copy on gh-pages
+      # Create and store artifacts
+      - run:
+          name: "Create Artifacts"
+          command: "make artifacts CI_ARTIFACTS=/tmp/artifacts"
+
+      - store_artifacts:
+          path: /tmp/artifacts
+
+      # Update gh-pages and gh-issues branches
       - run:
           name: "Update GitHub Pages"
-          command: |
-            if [ "${CIRCLE_TAG#draft-}" == "${CIRCLE_TAG}" ]; then
-              make gh-pages
-            fi
+          command: "make gh-pages"
+
+      - run:
+          name: "Save Issues"
+          command: "make gh-issues || true"
 
       # For tagged builds, upload to the datatracker.
       - deploy:
@@ -28,20 +56,6 @@ jobs:
             if [ "${CIRCLE_TAG#draft-}" != "${CIRCLE_TAG}" ]; then
               make upload
             fi
-
-      # # Save GitHub issues
-      # - run:
-      #     name: "Save GitHub Issues"
-      #     command: "make issues || make issues DISABLE_ISSUE_FETCH=true && make gh-issues"
-
-      # # Create and store artifacts
-      # - run:
-      #     name: "Create Artifacts"
-      #     command: "make artifacts CI_ARTIFACTS=/tmp/artifacts"
-
-      # - store_artifacts:
-      #     path: /tmp/artifacts
-
 
 workflows:
   version: 2
