Setup repository for draft-ietf-mls-protocol using https://github.com/martinthomson/i-d-template

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
-.#*
 *#
-*.redxml
-*.txt
 *.html
 *.pdf
-*.upload
-.tags
-*~
+*.redxml
 *.swp
-/*-[0-9][0-9].xml
+*.txt
+*.upload
+*~
+.#*
 .refcache
+.tags
 .targets.mk
-venv/
+/*-[0-9][0-9].xml
+archive.json
+draft-ietf-mls-protocol.xml
 issues.json
+lib
 pulls.json
 report.xml
+venv/
 lib
 draft-ietf-mls-protocol.xml
