--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,31 +6,64 @@ jobs:
     working_directory: ~/draft
 
     steps:
+      - run:
+          name: "Print Configuration"
+          command: |
+            xml2rfc --version
+            gem list -q kramdown-rfc2629
+            echo -n 'mmark '; mmark --version
+
+      - restore_cache:
+          name: "Restoring cache - Git"
+          keys:
+            - v2-cache-git-{{ .Branch }}-{{ .Revision }}
+            - v2-cache-git-{{ .Branch }}
+            - v2-cache-git-
+
+      - restore_cache:
+          name: "Restoring cache - References"
+          keys:
+            - v1-cache-references-{{ epoch }}
+            - v1-cache-references-
+
+      # Workaround for https://discuss.circleci.com/t/22437
+      - run:
+          name: Tag Checkout
+          command: |
+            if [ -n "$CIRCLE_TAG" ] && [ -d .git ]; then
+              remote=$(echo "$CIRCLE_REPOSITORY_URL" | \
+                       sed -e 's,/^git.github.com:,https://github.com/,')
+              git fetch -f "$remote" "refs/tags/$CIRCLE_TAG:refs/tags/$CIRCLE_TAG" || \
+                (echo 'Removing .git cache for tag build'; rm -rf .git)
+            fi
+
       - checkout
 
-      # Prime caches for faster checkout
-      - restore_cache:
-          keys:
-            - template
-      - run:
-          name: "Update Template"
-          command: "git -C ~/i-d-template remote update --prune"
-      - save_cache:
-          key: template
-          paths:
-            - ~/i-d-template
-
       # Build txt and html versions of drafts
-      - restore_cache:
-          keys:
-            - refcache
       - run:
           name: "Build Drafts"
-          command: "make 'CLONE_ARGS=--reference ~/i-d-template'"
-      - save_cache:
-          key: refcache
-          paths:
-            - ~/.cache/xml2rfc
+          command: "make 'CLONE_ARGS=--reference ~/git-reference'"
+
+      # Update editor's copy on gh-pages
+      - run:
+          name: "Update GitHub Pages"
+          command: |
+            if [ "${CIRCLE_TAG#draft-}" == "$CIRCLE_TAG" ]; then
+              make gh-pages
+            fi
+
+      # For tagged builds, upload to the datatracker.
+      - deploy:
+          name: "Upload to Datatracker"
+          command: |
+            if [ "${CIRCLE_TAG#draft-}" != "$CIRCLE_TAG" ]; then
+              make upload
+            fi
+
+      # Archive GitHub Issues
+      - run:
+          name: "Archive GitHub Issues"
+          command: "make archive || make archive DISABLE_ARCHIVE_FETCH=true && make gh-archive"
 
       # Create and store artifacts
       - run:
@@ -40,22 +73,22 @@ jobs:
       - store_artifacts:
           path: /tmp/artifacts
 
-      # Update gh-pages and gh-issues branches
       - run:
-          name: "Update GitHub Pages"
-          command: "make gh-pages"
+          name: "Prepare for Caching"
+          command: "git reflog expire --expire=now --all && git gc --prune=now"
 
-      - run:
-          name: "Save Issues"
-          command: "make gh-issues || true"
+      - save_cache:
+          name: "Saving Cache - Git"
+          key: v2-cache-git-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - ~/draft/.git
 
-      # For tagged builds, upload to the datatracker.
-      - deploy:
-          name: "Upload to Datatracker"
-          command: |
-            if [ "${CIRCLE_TAG#draft-}" != "${CIRCLE_TAG}" ]; then
-              make upload
-            fi
+      - save_cache:
+          name: "Saving Cache - Drafts"
+          key: v1-cache-references-{{ epoch }}
+          paths:
+            - ~/.cache/xml2rfc
+
 
 workflows:
   version: 2
