RLB review of RFC Editor's Proposed Changes (#879)
* RLB Edits through Section 5

* Update tooling to make diff cleaner

* Complete first pass

* Fix figures

* Apply caplitalization changes

* Final edits

* Address comments from @bren2010

* Expand RLB notes

* Address comments from @bren2010 and @rohan-wire

* Make 'cipher suite' two words

--- a/auth48/Makefile
+++ b/auth48/Makefile
@@ -15,14 +15,14 @@ gen: rfc${RFC}.gen.xml
 rfc${RFC}.gen.xml: ../${DRAFT}.md
 	make -C .. ${DRAFT}.xml
 	mv ../${DRAFT}.xml .
-	python3 normalize.py <${DRAFT}.xml | \
+	python3 xml-clean.py <${DRAFT}.xml | \
 		xmllint --exc-c14n - | \
-		xmllint --format - \
-		>rfc${RFC}.gen.xml
+		xmllint --format - | \
+		python3 text-clean.py >rfc${RFC}.gen.xml
 	rm ${DRAFT}.xml
 
 diff: rfc${RFC}.authors.xml rfc${RFC}.gen.xml
 	mvim -d rfc${RFC}.gen.xml rfc${RFC}.authors.xml
 
 clean:
-	rm *.xml
+	rm rfc${RFC}.gen.xml
